--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rforms",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pawelborkar.github.io/rforms/",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -10,6 +12,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
